# bike-kem

./: CMakeLists.txt  README.md  message.txt
Exposed_Files/: cipher.txt  message.txt  pk.txt  recovered_message.txt  sk.txt
cmake/: compilation-flags.cmake
include/: kem.h
include/internal/: bike_defs.h  types.h
src/: kem.c
src/decode/: decode.c
src/gf2x/: gf2x_inv.c
tests/: my_custom_test.c
tests/FromNIST/: PQCgenKAT_kem.c
tests/kats/: leanBIKE_l1_reliability6.kat  leanBIKE_l1_reliability7.kat  leanBIKE_l3_reliability5.kat  leanBIKE_l3_reliability6.kat  leanBIKE_l3_reliability7.kat
